<resources>
    <string name="app_name">Project 2</string>
    <string name="enter_a_generation_1_3">Enter a generation 1-3</string>
    <string name="go">Go!</string>
    <string name="enter_a_generation">Enter a generation</string>
    <string name="generation_1">Generation 1</string>
    <string name="pick_a_generation">Pick a generation!</string>
    <string name="generation_2">Generation 2</string>
    <string name="generation_3">Generation 3</string>
    <string name="please_pick_a_generation">Please pick a generation</string>
    <string name="please_choose_a_pokemon">Please Choose a Pokemon</string>
    <string name="Charmander" />
    <string name="charmander">Charmander</string>
    <string name="bulbasaur">Bulbasaur</string>
    <string name="squirtle">Squirtle</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="welcome">welcome</string>
    <string name="logout">logout</string>
    <string name="to_be_filled_in_later">To Be filled in later</string>
    <string name="adminstuff">adminstuff</string>
    <string name="login_welcome">Welcome to Pokemon Leveler\nPlease sign in</string>
    <string name="usermon">userMon</string>
    <string name="oppmon">oppMon</string>
    <string name="bulbasaurSprite">bulbasaurSprite</string>
    <string name="ivysaurSprite">ivysaurSprite</string>
    <string name="venasaurSprite">venasaurSprite</string>
    <string name="squirtleSprite">squirtlesprite</string>
    <string name="wartortleSprite">wartortlesprite</string>
    <string name="blastoiseSprite">blastoisesprite</string>
    <string name="charmanderSprite">charmandersprite</string>
    <string name="charmeleonSprite">charmeleonsprite</string>
    <string name="charizardSprite">charizardsprite</string>
    <string name="chikoritaSprite">chikoritasprite</string>
    <string name="bayleefSprite">bayleefsprite</string>
    <string name="meganiumSprite">meganiumsprite</string>
    <string name="cyndaquilSprite">cyndaquilSprite</string>
    <string name="quilavaSprite">quilavaSprite</string>
    <string name="typhlosionSprite">typhlosionSprite</string>
    <string name="totodileSprite">totodileSprite</string>
    <string name="croconawSprite">croconawSprite</string>
    <string name="feraligatrSprite">feraligatrSprite</string>
    <string name="treeckoSprite">treeckoSprite</string>
    <string name="grovyleSprite">grovyleSprite</string>
    <string name="sceptileSprite">sceptileSprite</string>
    <string name="torchicSprite">torchicSprite</string>
    <string name="combuskenSprite">combuskenSprite</string>
    <string name="blazikenSprite">blazikenSprite</string>
    <string name="mudkipSprite">mudkipSprite</string>
    <string name="marshtompSprite">marshtompSprite</string>
    <string name="swampertSprite">swampertSprite</string>
    <string name="congratulations_you_defeated_all_the_opponents_pokemon">Congratulations you defeated all the opponents pokemon!</string>
    <string name="back">back</string>
    <string name="back_button">.</string>
    <string name="log_out">Log out</string>
    <string name="battle">Battle</string>
    <string name="create_account">Create Account</string>
    <string name="pick_a__generation">pick a generation</string>
    <string name="Generation_2">Generation 2</string>
    <string name="chikorita">chikorita</string>
    <string name="cyndaquil">cyndaquil</string>
    <string name="totodile">totodile</string>
    <string name="torchic">torchic</string>
    <string name="treecko">treecko</string>
    <string name="mudkip">mudkip</string>
    <string name="bulbasaurspriteinvisible">bulbasaurSpriteInvisible</string>
    <string name="charmanderspriteinvisible">charmanderspriteinvisible</string>
    <string name="squirtlepriteinvisible">squirtlepriteinvisible</string>
    <string name="chikoritapriteinvisible">chikoritapriteinvisible</string>
    <string name="cyndaquilspriteinvisible">cyndaquilspriteinvisible</string>
    <string name="totodilespriteinvisible">totodilespriteinvisible</string>
    <string name="treeckospriteinvisible">treeckospriteinvisible</string>
    <string name="torchicspriteinvisible">torchicspriteinvisible</string>
    <string name="mudkipspriteinvisible">mudkipspriteinvisible</string>
    <string name="auto_win">auto win!</string>
    <string name="welcome_message">Welcome </string>
    <string name="welcome_username">Welcome, Username!</string>
</resources>