<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="6dp" >

    <EditText
        android:id="@+id/en_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username" />

    <EditText
        android:id="@+id/en_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password" />

    <Button
        android:id="@+id/en_login"
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />


</LinearLayout>