<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backButtonGen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_button"
        android:backgroundTint="@color/black"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/back_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        tools:layout_editor_absoluteY="449dp" />

    <TextView
        android:id="@+id/generation3TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309"
        android:layout_width="207dp"
        android:layout_height="63dp"
        android:text="@string/generation_3"
        android:textAlignment="center"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="194dp" />

    <ImageView
        android:id="@+id/treeckoImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/treecko"
        android:contentDescription="@string/treeckoSprite"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="304dp" />

    <ImageView
        android:id="@+id/torchicImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/torchic"
        android:contentDescription="@string/torchicSprite"
        tools:layout_editor_absoluteX="271dp"
        tools:layout_editor_absoluteY="329dp" />

    <ImageView
        android:id="@+id/mudkipImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mudkip"
        android:contentDescription="@string/mudkipSprite"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="482dp" />

    <Button
        android:id="@+id/treeckoButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:text="@string/treecko"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="146dp" />

    <Button
        android:id="@+id/torchicButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:text="@string/torchic"
        android:textSize="11sp"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="98dp" />

    <Button
        android:id="@+id/mudkipButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:text="@string/mudkip"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>